# COL781

./: .clang-format  .gitignore  todo.txt
a1/: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.txt
a1/examples/: clock.cpp  e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7.cpp  e8.cpp  teapot.cpp  top.cpp  uniforms.cpp
a1/src/: a1.hpp  api.inc  hw.cpp  hw.hpp  sw.cpp  sw.hpp
a2/: CMakeLists.txt  README.md  compile_flags.txt
a2/src/: example.cpp  hw.cpp  hw.hpp  mesh.cpp  mesh.hpp  sphere.cpp  square.cpp  viewer.cpp  viewer.hpp
a3/: Makefile  fragment.glsl
a3/src/: main.cpp  main_test.cpp
a3_cpp/: Makefile  todo.txt
a3_cpp/src/: camera.cpp  camera.hpp  constants.hpp  cornell_box.cpp  cornell_box_mesh.cpp  cornell_box_path.cpp  cornell_box_transformed.cpp  creative.cpp  debug.cpp  debug.hpp  e1_1.cpp  e1_2.cpp  e1_3.cpp  e1_4.cpp  e1_5.cpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  object.cpp  object.hpp  prompt.txt  ray.hpp  raytracer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shade_path.cpp  shade_ray.cpp  window.cpp  window.hpp
a4/: .gitignore  CMakeLists.txt  README.md  test_cr.py
a4/src/: animation.cpp  bone.cpp  bone.hpp  camera.cpp  camera.hpp  cloth.cpp  cloth.hpp  e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  hw.cpp  hw.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  timeline.cpp  timeline.hpp  timeline_test.cpp
raster/: Makefile  compile_flags.txt
raster/src/: display.cpp  raster.cpp  rasterizer.cpp  rasterizer.hpp
self/: Makefile  compile_flags.txt
self/src/: triangle.cpp
