cmake_minimum_required(VERSION 3.0)

project(a4)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O3 -Wall")

find_package(glm REQUIRED)
find_package(OpenGL REQUIRED)
find_package(SDL2 REQUIRED)

add_library(col781 src/hw.cpp src/camera.cpp src/mesh.cpp src/bone.cpp src/cloth.cpp src/sphere.cpp src/plane.cpp src/timeline.cpp deps/src/gl.c)
target_include_directories(col781 PUBLIC /opt/homebrew/include)
target_include_directories(col781 PUBLIC deps/include)
target_link_libraries(col781 glm::glm OpenGL::GL SDL2::SDL2)

add_executable(animation src/animation.cpp)
add_executable(e1 src/e1.cpp)
add_executable(e2 src/e2.cpp)
add_executable(e3 src/e3.cpp)
add_executable(e4 src/e4.cpp)
add_executable(timeline_test src/timeline_test.cpp)
target_link_libraries(animation col781)
target_link_libraries(e1 col781)
target_link_libraries(e2 col781)
target_link_libraries(e3 col781)
target_link_libraries(e4 col781)
target_link_libraries(timeline_test col781)
